# azure-inventory-saas

./: .env.example  .gitignore  README.md  docker-compose.yml  note  prompt.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: auth.py  resources.py
backend/app/core/: celery_app.py  config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  azure.py  identity.py  sync.py
backend/app/repositories/: azure.py  identity.py
backend/app/schemas/: auth.py  azure.py
backend/app/services/: microsoft.py  sync.py
backend/app/tasks/: sync.py
docs/: api.md  architecture.md  auth-flow.md  deployment-vm.md  security.md  tenant-isolation.md
frontend/: Dockerfile  middleware.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/resources/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/subscriptions/: page.tsx
frontend/components/: app-shell.tsx  resource-table.tsx  stat-grid.tsx
frontend/components/ui/: button.tsx  card.tsx
frontend/lib/: api.ts  msal.ts  server-api.ts
frontend/store/: session.ts
infra/: README.md
infra/envs/dev/: main.tf  outputs.tf  tfplan  (+5 more)
nginx/: nginx.conf
scripts/: check-vm-upload.ps1  deploy-dev-vm.ps1  deploy-via-az-run-command.ps1  deploy-via-single-run-command.ps1  run-vm-compose.ps1  update-env-from-terraform.ps1
(+9 files in other folders)
