[project]
name = "azure-inventory-backend"
version = "0.1.0"
description = "Multi-tenant Azure inventory API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "celery[redis]>=5.4.0",
  "cryptography>=43.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "msal>=1.31.0",
  "pydantic-settings>=2.5.2",
  "pydantic>=2.9.2",
  "pyjwt[crypto]>=2.9.0",
  "python-multipart>=0.0.9",
  "redis>=5.1.0",
  "sqlalchemy[asyncio]>=2.0.35",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "pytest-asyncio>=0.24.0", "ruff>=0.6.9"]

[tool.ruff]
line-length = 100
target-version = "py312"

